# execsim-optimal-execution

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/execsim/: benchmarks.py  data.py  eval.py  fig_ac_inventory.py  fig_ac_path.py  fig_ac_path_boundary.py  fig_ac_path_final.py  fig_ac_path_steps.py  fig_is_benchmark.py  fig_midprice_twap.py  main.py  main_heavy.py  mm_data.py  plotting.py  policy.py  report.py  run_mm_study.py  sim.py
src/execsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
